force-app/main/default/objects/Event_Configuration__mdt/Event_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Event Configuration</label>
    <pluralLabel>Event Configurations</pluralLabel>
</CustomObject>