force-app/main/default/objects/Event_Configuration__mdt/fields/CommandClassName__c.field-meta.xml
<CustomField>
    <fullName>CommandClassName__c</fullName>
    <label>Command Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>