force-app/main/default/objects/Event_Configuration__mdt/fields/DisableDispatcher__c.field-meta.xml
<CustomField>
    <fullName>DisableDispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Dispatcher</label>
    <type>Checkbox</type>
</CustomField>