force-app/main/default/objects/Event_Configuration__mdt/fields/NamedCredencial__c.field-meta.xml
<CustomField>
    <fullName>NamedCredencial__c</fullName>
    <description>Named Credencial responsible for the HTTP request for outboubnd commands</description>
    <label>Named Credencial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>